cros: Clear focus for Cancel button on shelf

Clear focus for Cancel button only, because other types of buttons
may still want to keep the focus after being pressed. (Although,
currently no other buttons really need to keep the focus: they either
trigger restart of Chrome, or the login/lock screen will explicitly
request the focus.)

Bug: 797752
Change-Id: Ib48969e61472c3e6ccda2a413d5ec3d719754ef4
Reviewed-on: https://chromium-review.googlesource.com/885624
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531939}
Former-commit-id: e216da29bebdd1011e81811769f7cc324e7accf7